--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-#HEROKU - DATABASE
-spring.datasource.url = ${JDBC_DATASOURCE_URL}
+#MYSQL
+spring.datasource.url = jdbc:mysql://localhost:3306/desafiodb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username = root
 
 #JPA
 spring.jpa.hibernate.ddl-auto = update
