--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,10 @@
-#PRODUÇÃO
-spring.profiles.active=prod
-
 #HEROKU - DATABASE
 spring.datasource.url = $DATABASE_URL
 
 #JPA
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.open-in-view = true
 
 # THYMELEAF
-spring.thymeleaf.cache = false
+spring.thymeleaf.cache = true
