--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 #HEROKU - DATABASE
-spring.datasource.url = 
+spring.datasource.url = mysql://b5b826edb5a448:11760532@us-cdbr-east-05.cleardb.net/heroku_2d72e2592adde22?reconnect=true
 
 #JPA
 spring.jpa.hibernate.ddl-auto = update
