--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #MYSQL
-spring.datasource.url = jdbc:mysql://localhost:3306/desafiodb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username = root
+spring.datasource.url = #######
+spring.datasource.username = #######
 
 #JPA
 spring.jpa.hibernate.ddl-auto = update
